<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.TaskActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/Widget.MaterialComponents.Toolbar.PrimarySurface"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSurface"
        android:elevation="4dp" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <EditText
                android:id="@+id/etTaskName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_task_name"
                android:imeOptions="actionNext"
                android:inputType="textMultiLine|textCapSentences"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/colorPrimaryDark"
                android:background="@null"
                android:textAppearance="?attr/textAppearanceBody1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tvDateCreated"
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textAppearance="?attr/textAppearanceBody1"
                android:layout_margin="16dp"
                app:layout_constraintTop_toBottomOf="@+id/etTaskName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintTop_toBottomOf="@+id/tvDateCreated"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvPriority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/title_margin_start"
                android:layout_marginTop="@dimen/title_margin_top"
                android:text="@string/prioritize"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/colorSecondaryLight"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <Spinner
                android:id="@+id/priorityOptions"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/title_margin_top"
                android:padding="10dp"
                android:entries="@array/priority"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPriority" />

            <EditText
                android:id="@+id/etTaskDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:inputType="textMultiLine|textCapSentences"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="16dp"
                android:textColor="@color/colorPrimaryDark"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/priorityOptions"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/title_margin_start"
                android:layout_marginTop="@dimen/title_margin_top"
                android:text="@string/due_date_time"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/colorSecondaryLight"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etTaskDescription" />

            <TextView
                android:id="@+id/tvDueDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/set_task_deadline"
                app:drawableStartCompat="@drawable/ic_calender"
                app:drawableTint="@color/colorSecondaryLight"
                android:textColor="@color/colorPrimaryDark"
                android:drawablePadding="5dp"
                android:textIsSelectable="false"
                android:layout_marginStart="@dimen/title_margin_start"
                android:layout_marginTop="@dimen/title_margin_start"
                android:layout_marginEnd="@dimen/title_margin_start"
                android:paddingBottom="30dp"
                app:layout_constraintTop_toBottomOf="@+id/tvDate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>
