<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/Widget.MaterialComponents.Toolbar.PrimarySurface"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSurface"
        android:elevation="4dp" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:paddingBottom="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/etTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/note_title"
                    android:imeOptions="actionNext"
                    android:inputType="textMultiLine|textCapSentences"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:background="@null"
                    android:textAppearance="?attr/textAppearanceBody1"/>

                <TextView
                    android:id="@+id/tvDateCreated"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:layout_margin="16dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/labelGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="16dp"/>

                <fortunate.signature.penit.utils.OverflowEditText
                    android:id="@+id/etBody"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:hint="@string/note"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:inputType="textMultiLine|textCapSentences"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/title_margin_start"
                    android:layout_marginTop="@dimen/title_margin_top"
                    android:text="@string/add_list"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="@color/colorSecondaryLight"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:overScrollMode="never"
                    android:layout_marginTop="16dp"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/addItem"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="12dp"
                    android:gravity="center_vertical"
                    android:layout_margin="16dp"
                    android:text="@string/add_new_item"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="@color/colorSecondaryLight"
                    app:drawableStartCompat="@drawable/ic_add"
                    app:drawableTint="@color/colorSecondaryLight" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>