<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/taskCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    app:cardElevation="1dp"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="4dp"
    app:shapeAppearance="?shapeAppearanceMediumComponent"
    app:strokeColor="@color/secondary_translucent"
    app:strokeWidth="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/priorityState"
            android:layout_width="36dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tvTaskDueDate"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTaskTitle"
            style="@style/TextText.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:paddingStart="8dp"
            android:paddingEnd="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toStartOf="@id/btnTaskState"
            app:layout_constraintStart_toEndOf="@id/priorityState"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@tools:sample/lorem/random" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTaskDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingStart="8dp"
            android:paddingEnd="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toStartOf="@id/btnTaskState"
            app:layout_constraintStart_toEndOf="@id/priorityState"
            app:layout_constraintTop_toBottomOf="@+id/tvTaskTitle"
            tools:text="@tools:sample/lorem/random" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTaskDueDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:paddingBottom="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:maxLines="1"
            android:textStyle="italic"
            android:textColor="@color/colorPrimary"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintEnd_toStartOf="@+id/btnReminder"
            app:layout_constraintStart_toEndOf="@id/priorityState"
            app:layout_constraintTop_toBottomOf="@+id/tvTaskDescription"
            tools:text="@string/due_date_and_time" />

        <ImageButton
            android:id="@+id/btnTaskState"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="5dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/delete_task_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btnReminder"/>

        <ImageButton
            android:id="@+id/btnReminder"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="10dp"
            app:tint="@color/colorSecondaryLight"
            android:src="@drawable/ic_alarm_on"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/reminder_button"
            app:layout_constraintTop_toTopOf="@id/tvTaskDueDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>